everpal: Disable NFC apps for non-NFC variants
Change-Id: Ie25ef85f61e5185a00de36d55b1a11db93536840
Signed-off-by: Sushrut1101 <guptasushrut@gmail.com>

--- a/overlay/FrameworksRes/res/values/config.xml
+++ b/overlay/FrameworksRes/res/values/config.xml
@@ -27,4 +27,17 @@
          -->
     <string name="config_mainBuiltInDisplayCutout">M 0,0 H -37 V 99 H 37 V 0 H 0 Z</string>
 
+    <!-- Applications which are disabled unless matching a particular sku -->
+    <string-array name="config_disableApksUnlessMatchedSku_apk_list" translatable="false">
+        <item>com.android.nfc</item>
+        <item>com.android.se</item>
+        <item>com.android.apps.tag</item>
+        <item>com.google.android.tag</item>
+    </string-array>
+
+    <string-array name="config_disableApkUnlessMatchedSku_skus_list" translatable="false">
+        <item>evergreen</item>
+        <item>opal</item>
+    </string-array>
+
 </resources>
